--- a/css/footer.css
+++ b/css/footer.css
@@ -26,6 +26,7 @@
     width: 15%;
 }
 .footer-ul{
+    z-index: 5;
     display: flex;
     list-style: none;
     text-transform: uppercase;
@@ -45,4 +46,48 @@
 }
 .footer-contacts span{
     padding: 0.5em;
+}
+@media(max-width:936px){
+    .footer-li{
+        font-size: 1em;
+        padding: 0.6em;
+    }
+    .footer-contacts{
+        font-size: 1em;
+    }
+    .info-title{
+        padding: 0.2em 0.7em;
+        font-size: 1.2em;
+    }
+}
+@media(max-width:756px){
+    .footer-ul{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    .footer-li{
+        font-size: 0.8em;
+        padding: 0.5em;
+    }
+    .footer-contacts{
+        font-size: 0.8em;
+    }
+    .info-title{
+        padding: 0.2em 0.7em;
+        font-size: 1em;
+    }
+}
+@media(max-width:500px){
+    .info-logo{
+        display: none;
+    }
+    .info-title{
+        display: none;
+    }
+    .company-info{
+        width: 0%;
+    }
+    .footer-container{
+        justify-content:space-around;
+    }
 }
