--- a/css/examples.css
+++ b/css/examples.css
@@ -2,6 +2,7 @@
 .examples-container{
     backdrop-filter:brightness(30%);
     width: 100%;
+    height: 50%;
     position: relative;
     display: flex;
     justify-content: center;
@@ -101,6 +102,29 @@
         text-shadow: rgb(255, 255, 255) 1px 0 1px;
     }
 }
+@media (max-width:418px) {
+    .example-text-title{
+        font-size: 1.7em;
+    }
+    .example-text-description{
+        font-size:0.8em;
+    }
+}
+@media (max-width:386px) {
+    .example-block{
+        padding: 1em;
+    }
+    .example-text{
+        padding:0em;
+    }
+    .example-text-title{
+        font-size: 1.5em;
+    }
+    .example-text-description{
+        display: none;
+    }
+}
+
 
 
 
