--- a/css/start-page.css
+++ b/css/start-page.css
@@ -1,20 +1,23 @@
 
 .start-page-title{
     font-size: 2.7em;
-    text-shadow: rgb(255, 136, 0) 1px 0 1px;
+    /* text-shadow: rgb(255, 136, 0) 1px 0 1px; */
     text-align: center;
+    font-weight: 500;
 }
 .start-page-subtitle{
     font-size: 1.8em;
-    text-shadow: rgb(255, 136, 0) 1px 0 1px;
+    /* text-shadow: rgb(255, 136, 0) 1px 0 1px; */
     text-align: center;
+    font-weight: 400;
 }
 .main-container{
     color: black;
-
+    position:relative;
+    top:20%;
     width: 100%;
-    backdrop-filter: invert(80%);
-    height: 20%;
+    background-color: rgba(0, 136, 146, 0.4);
+    height: 40%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -22,18 +25,103 @@
     
 }
 .start-page-section{
-    background-image: url("../img/start-bg.jpg");
-    background-repeat: no-repeat;
+    /* background-image: url("../img/start-bg.jpg"); */
+    /* background-repeat: no-repeat; */
     /* background-image: linear-gradient(to bottom, #ffffff00 80%, #ffffff 20%); */
-    background-position: center;
-    background-size: cover;
-    background-color: rgb(21, 3, 3);
+    /* background-position: center; */
+    /* background-size: cover; */
+    background-color: rgb(206, 206, 206);
     display: flex;
-    align-items: center;
     width: 100%;
-    height:900px;
+    height:450px;
     
 }
+
+.camera {
+  border: black 1px solid;
+    content: "";
+    display: block;
+    position: absolute;
+    width: 30px;
+    height: 32px;
+    right: 20%;
+    background-color: rgb(255, 255, 255);
+    border-radius: 0% 0% 50% 50%;
+    z-index: 2;
+    top: calc(100% + 20px);
+  }
+  .circle {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 26px;
+    height:26px;
+    top: 6px;
+    left: 6.25%;
+    border: #000000 3px solid;
+    background-color: transparent;
+    border-radius: 50% 50% 50% 50%;
+    z-index: 2;
+  }
+  .eye {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 17px;
+    height:17px;
+    top: 4px;
+    left: 2px;
+    border: #000000 2px solid;
+    background-color: gray;
+    border-radius: 50% 50% 50% 50%;
+    z-index: 2;
+  }
+
+  .camera:before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 43px;
+    height: 23px;
+    background-color: black;
+    top: -20px;
+    left: -6px;
+    border-radius: 0% 0% 30% 30%;
+  }
+  
+  .eye:after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 7px;
+    height: 20px;
+    top: -39px;
+    left: -36px;
+    border-top: 30px solid transparent;
+    border-bottom: 150px solid rgba(0, 136, 146, 0.4);
+    border-left: 40px solid transparent;
+    border-right: 40px solid transparent;
+    z-index: 1;
+  }
+  
+  @keyframes swing {
+    0% {
+      transform: rotate(-7deg);
+      
+    }
+    100% {
+      transform: rotate(12deg);
+    }
+  }
+  
+  /* .swing::after {
+    animation: swing 4s infinite alternate ease-in-out;
+    transform-origin: 0px 0px;
+  } */
+  .eye{
+    animation: swing 4s infinite alternate ease-in-out;
+    transform-origin: 0px 0px;
+  }
 
 @media (max-width: 736px){
     .start-page-title{
