--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 }
 html,body{
     padding: 0;
-    font-family:'Courier New', Courier, monospace;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 0;
     width: 100%;
     height: 100%;
@@ -20,8 +20,12 @@ html,body{
     background-size: cover;
 }
 .section-title{
-    color: wheat;
+    color: rgb(0, 0, 0);
     font-size: 2.3em;
+    width: 100%;
+    display: block;
+    text-align: center;
+    padding: 1.2em;
 }
 @media (max-width:540px){
     .section-title{
