--- a/css/services.css
+++ b/css/services.css
@@ -12,7 +12,7 @@
 }
 
 .service {
-    margin: 0px 20px;
+    margin: 20px;
     width: 25%;
     background-size: cover;
     background-position: center;
@@ -22,11 +22,11 @@
 }
 .service:hover{
     cursor: pointer;
-    border: 4px solid rgba(255, 68, 0, 0.644);
+    border: 4px solid rgba(0, 136, 146, 0.4);
     transform: translate(-4px,-4px);
-    box-shadow: 5px 5px 4px 4px rgb(92, 92, 92);
+    box-shadow: 5px 5px 4px 4px rgba(0, 136, 146, 0.4);
     .service-details{
-        border:2px solid rgba(255, 68, 0, 0.644);
+        border:2px solid rgba(0, 136, 146, 0.4);
         font-size: 101%;
     }
 }
