--- a/css/examples.css
+++ b/css/examples.css
@@ -1,7 +1,9 @@
+.examples-section{
+    background-color: rgb(206, 206, 206);
+    width: 100%;
+}
 
 .examples-container{
-    background-color: rgb(206, 206, 206);
-    /* backdrop-filter:brightness(30%); */
     width: 100%;
     height: 50%;
     position: relative;
