--- a/css/style.css
+++ b/css/style.css
@@ -1,46 +1,22 @@
-*{
+* {
     box-sizing: border-box;
 }
-html,body{
-    padding: 0;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+body {
+    background-color: rgb(249, 249, 252);
+    font-family: Arial, sans-serif;
     margin: 0;
-    width: 100%;
-    height: 100%;
 }
 
-/* .fixed-position{
-    position: fixed;
-} */
-
-.advantages-examples-wrapper{
-    background-image: url("../img/advantages/advantages-background.jpg");
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover;
-}
-.section-title{
-    color: rgb(0, 0, 0);
-    font-size: 2.3em;
-    width: 100%;
-    display: block;
+.section-title {
+    margin-top: 70px;
+    margin-bottom: 35px;
+    font-size: 28px;
+    font-weight: bold;
+    color: #333;
     text-align: center;
-    padding: 1.2em;
-    border-top: 2px solid rgba(0, 136, 146, 0.4);
-    border-bottom: 2px solid rgba(0, 136, 146, 0.4);
-}
-@media (max-width:540px){
-    .section-title{
-        font-size: 1.8em;
-    }
-}
-@media (max-width:425px){
-    .section-title{
-        font-size: 1.5em;
-    }
-}
-@media (max-width:372px){
-    .section-title{
-        font-size: 1.3em;
-    }
-}
+    margin-bottom: 15px;
+    line-height: 1.2;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+  }
